--- a/ernogpt.html
+++ b/ernogpt.html
@@ -1,5 +1,21 @@
 <html>
-	<style>        .glow {
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+	<style>     
+	
+	body {
+      background-image: url('https://images.unsplash.com/photo-1486707471592-8e7eb7e36f78?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGZvZ2d5JTIwZm9yZXN0fGVufDB8fDB8fHww');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      margin: 0;
+      height: 100vh;
+    }
+	
+	.glow {
 		font-size: 30;
 		font-family: 'Press Start 2P', sans-serif;
 		color: #fff;
@@ -136,10 +152,9 @@
 		  color: rgb(43, 255, 0);
 		}
 	  </style>
-	<body background="https://cdn.pixabay.com/photo/2014/06/16/23/39/black-370118_1280.png"></body>
 	<head>
 		<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-		<title>Otsikko</title>
+		<title>ErnoGPT - Tekoäly</title>
 
 	<style type="text/css">
 		
@@ -337,8 +352,7 @@
 <html lang="fi">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>ErnoGPT</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 		<style>
 			body { font-family: Arial, sans-serif; text-align: center; background-color: #333; color: white; }
 			h2 { color: #FFD700; }
@@ -395,7 +409,7 @@
 				const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
 					method: "POST",
 					headers: {
-						"Authorization": "Bearer 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" // Lisää oma API-avaimesi tähän!
+						"Authorization": "Bearer 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" // Lisää oma API-avaimesi tähän!
 					},
 					body: JSON.stringify({
 						model: "deepseek/deepseek-chat:free",
@@ -411,21 +425,21 @@
 				const userInput = document.getElementById("userInput");
 				const chatbox = document.getElementById("chatbox");
 	
-				if (userInput.value.trim() === "") return; // Ei lähetä tyhjiä viestejä
+				if (userInput.value.trim() === "") return;
 	
 				chatbox.innerHTML += `<p><b>Sinä:</b> ${userInput.value}</p>`;
 				chatbox.innerHTML += `<p><i><b>Erno miettii...</b></i><div class="loading"></div></p>`;
 	
 				getResponse(userInput.value).then(response => {
-					// Poistaa lataus-viestin ja lisää botin vastauksen
+				
 					const loadingElement = chatbox.querySelector(".loading");
 					loadingElement.parentNode.innerHTML = `<p><b>Erno:</b> ${response}</p>`;
 				});
 	
-				userInput.value = ""; // Tyhjentää input-kentän
+				userInput.value = "";
 			}
 	
-			// Enter-näppäin lähettää viestin
+			
 			document.getElementById("userInput").addEventListener("keypress", function(event) {
 				if (event.key === "Enter") {
 					sendMessage();
@@ -434,4 +448,5 @@
 			});
 		</script>
 	</body>
-	</html>
+	</html><html>
+
