--- a/aligpt.html
+++ b/aligpt.html
@@ -485,7 +485,7 @@ const yap = "6332737462334974646A45744E6D45314E6D4D305A6D4D304D444E69595745324D3
       };
 
       const body = {
-          model: "google/gemma-3-4b-it:free", // Model that handles text and images
+          model: "openrouter/quasar-alpha", // Model that handles text and images
           messages: [
               { role: "user", content: userMessage ? [{ type: "text", text: userMessage }] : [] }
           ],
